<resources>
    <string name="app_name">流浪宠物日记</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">设置</string>
    <string name="action_send">发出</string>
    <string name="title_activity_login">登录</string>


    <string name="poster_shower_follow">关注</string>
    <string name="poster_shower_collect">收藏</string>
    <string name="poster_shower_timeline">分享到朋友圈</string>
    <string name="poster_shower_wechatsession">分享到微信</string>
    <string name="poster_shower_help">我来帮助</string>

    <!-- Strings related to login -->
    <string name="prompt_mobile">手机号码</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登录或注册</string>
    <string name="action_sign_in_short">登录</string>
    <string name="error_invalid_mobile">你输入的手机号码不正确</string>
    <string name="error_invalid_password">你输入的密码少于4位数</string>
    <string name="error_incorrect_password">密码不正确</string>
    <string name="error_field_required">这个字段是必填的</string>
    <string name="permission_rationale">"获取你的手机通讯录需要设置为允许读取"
    </string>
    <string name="title_activity_member_info">个人资料</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_settings">设置</string>
    <string name="title_activity_poster_create">发起救助</string>
    <string name="title_activity_address_search">所在位置</string>


    <array name="send_poster_type">
        <item>发起救助</item>
        <item>我要求助</item>
    </array>


    <string name="poster_create_detail">流浪的小可爱需要什么...</string>
    <string name="poster_create_contact">我的联系方式</string>
    <string name="title_activity_poster_shower">关注，分享，救助</string>
    <string name="section_format">Hello World from section: %1$d</string>


    <string name="errcode_success">发送成功</string>
    <string name="errcode_cancel">发送取消</string>
    <string name="errcode_deny">发送被拒绝</string>
    <string name="errcode_unknown">发送返回</string>


    <string name="poster_list">附近所有</string>
    <string name="poster_follow">我的关注</string>
    <string name="poster_collect">我的收藏</string>
    <string name="poster_involve">我的参与</string>


    <string name="action_type_all">显示全部</string>
    <string name="action_type_1">只显示待救助</string>
    <string name="action_type_2">只显示求助</string>
</resources>
